--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 				</div>
 			</div>
 			<div class="container-lg-12 col-md-12 col-sm-12 container-again" style="" id="unique1"> Join Web Design & Development Classes Today. 
-<div class="btn container-again1" style="">Apply Now!</div></div> 
+<div class="btn container-again1" id="unique2" style="">Apply Now!</div></div> 
 		</div>
 		</div>
 		<!-- SECTION LABEL -->
