--- a/index.html
+++ b/index.html
@@ -173,7 +173,26 @@
 		</div>
 
 
+     <!-- SECTION LABEL -->
+	<div id="perfection"></div>
+		<!-- PERFECTION SECTION -->
+		<div class="perfection-section">
+			<div class="perfection-bg-section-left">
+			</div>
+			<div class="perfection-bg-section-right">
+			</div>
+			<div class="container perfection-container">
+				<div class="col-md-12 title-section perfection-title-section">
+					<h2 class="title">Web designing - In brief!</h2>
+					<p class="title-details">Web designing is the way you present your website and the content that fills it. It is a creative portion of the website that helps to attract the crowd. It connects the need for creating aesthetically appealing, simple, and elegant websites. Web designing comprises several aspects that you may not know until you get into it. It is one of the highly in-demand jobs because of the rising technological dependence. It is vital as different gadgets come with different screen sizes. It allows the creator to make adaptable designs that automatically adapt to the screen. Web designers are the magicians that create a world of magic to enjoy!</p>
 
+					
+				</div>
+				<!-- <div class="perfection-header-img">
+						<img src="assets/images/perfection-header-img.png">
+					</div> -->
+			</div>
+		</div>
 
 
 		<!-- SECTION LABEL -->
@@ -181,6 +200,12 @@
 		<!-- HIGHLIGHTS SECTION -->
 		<div class="highlights-section">
 			<div class="highlights-bg-section">
+			</div>
+			<div class="container text-center">
+				<h2 class="card-title">Scope for web designing in India!</h2>
+				<p class="card-details">
+				Understanding the need for the field you pick is essential. It allows you to plan your work accordingly and make plans for the future. The following are the scope for web designing:
+				</p>
 			</div>
 			<div class="container highlights-container">
 				<div class="col-lg-4 col-md-6 col-sm-12 highlights-cards-section">
