--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
 					<p class="title-details">The world of web development is not all about creativity, designing, and laying the best. It also comprises coding in languages like JavaScript, PHP, Python etc. and much more. You can understand the world of web development and pursue it as three developers.</p>
 				</div> 
-				<!-- <div class="perfection-header-img">
+			 <div class="perfection-header-img">
 						<img src="assets/images/perfection-header-img.png">
 			 		</div> 
 			</div>
@@ -420,7 +420,7 @@
 								<img src="assets/images/launch-pad-img.svg">
 							</div>
 							<div class="features-card-content-section">
-								<!-- <h3>Projects</h3> 
+								 <h3>Projects</h3> 
 								<p>It brings students the opportunity of training, workshops and also notifies them about the current openings.</p>
 							</div>
 						</div>
@@ -429,7 +429,7 @@
 								<img src="assets/images/launch-pad-img.svg">
 							</div>
 							<div class="features-card-content-section">
-								<!-- <h3>Social Integration</h3> 
+								 <h3>Social Integration</h3> 
 								<p>It is a trusted training space that allows for quality education, certification, and a variety to choose from in courses. 
 
 </p>
