--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
 			</div>
 			<div class="container perfection-container">
 				<div class="col-md-12 title-section perfection-title-section">
-					<h2 class="title">Web Designing </h2>
-					<p class="title-details">Web designers are the magicians that create a world of magic to enjoy! Things to learn about Web designing: </p>
+					<h2 class="title web2header">Web Designing </h2>
+					<p class="title-details web2subtitle">Web designers are the magicians that create a world of magic to enjoy! Things to learn about Web designing: </p>
 
-					<ul>
+					<ul class="web2list">
 						<li>Web designing is the way you present your website and the content that fills it.
 						</li>
 						<li>It is a creative portion of the website that helps to attract the crowd.</li>
