--- a/index.html
+++ b/index.html
@@ -249,14 +249,14 @@
 			<div class="highlights-bg-section">
 			</div>
 			<div class="container text-center">
-				<h2 class="card-title">Scope for web designing in India!</h2>
-				<p class="card-details">
+				<h2 class="card-title scopetitle">Scope for web designing in India!</h2>
+				<p class="card-details scopesubtitle">
 				Understanding the need for the field you pick is essential. It allows you to plan your work accordingly and make plans for the future. The following are the scope for web designing:
 				</p>
 			</div>
-			<div class="container highlights-container">
+			<div class="container highlights-container scopecontainer">
 				<div class="col-lg-4 col-md-6 col-sm-12 highlights-cards-section">
-					<div class="highlights-card">
+					<div class="highlights-card frontd">
 						<div class="highlights-card-img-section">
 							<img src="assets/images/features/pik1.jpg">
 						</div>
@@ -794,7 +794,7 @@
 				<div class="container contact-us-content-container">
 					<div class="col-md-6 pr-0 contact-us-form-section">
 						<div class="col-md-12 title-section contact-us-title-section">
-							<p class="subtitle">Register Now</p>
+							<p class="subtitle registernow">Register Now</p>
 							<h2 class="title">I Want To Start With A
 Free Demo!!!</h2>
 							<p class="title-details">We're always available for a chat so do feel free to get in touch
