--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12 highlights-cards-section">
-					<div class="highlights-card highlights-card-center">
+					<div class="highlights-card highlights-card-center uiuxd">
 						<div class="highlights-card-img-section">
 							<img src="assets/images//features/pik4.jpg">
 						</div>
@@ -288,7 +288,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 col-sm-12 highlights-cards-section">
-					<div class="highlights-card">
+					<div class="highlights-card websd">
 						<div class="highlights-card-img-section">
 							<img src="assets/images//features/pik3.jpg">
 						</div>
@@ -339,9 +339,9 @@
 		<div class="highlights" id="cards-sop">
 
 			<div class="container">
-				<div class="card-title">Web designing - What can you expect in hand?
+				<div class="card-title web3title">Web designing - What can you expect in hand?
  </div>
-				<div class="card-details text-center">Money is a vital aspect of a job, and you should always know about it before you enter your stream. The following are the raises and the graph if you get into web designing:</div>
+				<div class="card-details text-center web3subtitle">Money is a vital aspect of a job, and you should always know about it before you enter your stream. The following are the raises and the graph if you get into web designing:</div>
 			</div>
 
 			<div class="container highlights-container">
