--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 					<div class="card_new 1">
 						<!-- <div class="card_image"> <img src="https://i.redd.it/b3esnz5ra34y.jpg" /> </div> -->
 						<div class="card_title title-white">
-							<p>Newbie</p>
+							<p id="newbie">Newbie</p>
 						</div>
 						<div class="card_details">
 							<p>They are the recruits that come with no or few months of experience. They can earn up to 1.5-2 LPA.</p>
@@ -364,7 +364,7 @@
 								src="https://cdn.blackmilkclothing.com/media/wysiwyg/Wallpapers/PhoneWallpapers_FloralCoral.jpg" />
 						</div> -->
 						<div class="card_title title-white">
-							<p>Early career</p>
+							<p id="Earlycareer">Early career</p>
 						</div>
 						<div class="card_details">
 							<p>The career takes up a milestone when you hit 1-2 years of experience. Here, the package can go to 2.5-3 LPA.</p>
@@ -376,7 +376,7 @@
 							<img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
 						</div> -->
 						<div class="card_title title-white">
-							<p>Experienced</p>
+							<p id="experienced">Experienced</p>
 						</div>
 						<div class="card_details">
 							<p>When you cross the bar of 5-6 years in the field, you know the hacks of the space. You will be getting a minimum of 4-5 LPA.</p>
@@ -389,7 +389,7 @@
 							<img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif" />
 						</div> -->
 						<div class="card_title title-white">
-							<p>Professional</p>
+							<p id="proffes">Professional</p>
 						</div>
 						<div class="card_details">
 							<p>Now that you are well-versed with everything, you will be eligible for a 5+ LPA package. Your salary will now increase as per your skills and creativity periodically.</p>
