--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 		<!-- SECTION LABEL -->
 		<div id="features"></div>
 		<!-- FEATURES SECTION -->
-		<div class="features-section">
+		<div class="features-section factorsection">
 			<div class="container features-container">
 				<div class="col-lg-4 col-md-6 features-header-img-section">
 					<img src="assets/images/features2.png">
@@ -422,10 +422,10 @@
 				<div class="col-lg-8 col-md-12 features-content-section">
 					<div class="col-md-12 title-section features-title-section">
 						<!-- <p class="subtitle">About our Course</p> -->
-						<h2 class="title">Factors affecting the pay scale</h2>
-						<p class="title-details">Salary of a workplace and designation calculates and comes from various factors. They are the determiners and can be the following:</p>
+						<h2 class="title factorstitle">Factors affecting the pay scale</h2>
+						<p class="title-details factorssubtitle">Salary of a workplace and designation calculates and comes from various factors. They are the determiners and can be the following:</p>
 					</div>
-					<div class="container features-card-container">
+					<div class="container features-card-container factors2section">
 						<div class="col-md-10 features-card">
 							<div class="features-card-img-section">
 								<img src="assets/images/launch-pad-img.svg">
